2011-03-22  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: work around the fact that AC_PROG_CXX is buggy and
	reports a compiler even when no working compiler exists.  So if a
	test compilation fails with the compiler it returns, we clear CXX
	The compilation is done for an Objective-C++ test file since that's
	what we actually want a C++ compiler for normally.

2011-03-22  Nicola Pero  <nicola.pero@meta-innovation.com>

	* config-noarch.make.in: Updated comment.

2011-03-22  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUstep.sh.in: Unset GNUSTEP_LIBRARY_PATHLIST after using it.
	* GNUstep.csh.in: Likewise.

2011-03-22  Nicola Pero  <nicola.pero@meta-innovation.com>

	* filesystem.make.in (GNUSTEP_USER_DIR_APPS,
	GNUSTEP_USER_DIR_ADMIN_APPS, GNUSTEP_USER_DIR_WEB_APPS,
	GNUSTEP_USER_DIR_TOOLS, GNUSTEP_USER_DIR_ADMIN_TOOLS,
	GNUSTEP_USER_DIR_LIBRARY, GNUSTEP_USER_DIR_HEADERS,
	GNUSTEP_USER_DIR_LIBRARIES, GNUSTEP_USER_DIR_DOC,
	GNUSTEP_USER_DIR_DOC_MAN, GNUSTEP_USER_DIR_DOC_INFO): Detect %u,
	%i and %% and replace them with the user name, the user id or %.
	* filesystem.sh.in: Same.
	* filesystem.csh.in: Same.
	
2011-03-21  Richard Frith-Macdonald <rfm@gnu.org>

	* gnustep-config.in: allow checking of the CXX variable to see what
	compiler (if any) was found to support building Objective-C++ code.
	* TestFramework/gnustep-tests.in: Check the value of CXX to correctly
	build Objective-C++ tests and to refrain from running Objective-C++
	tests on systems which don't have a compiler.

2011-03-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Instance/Documentation/texi.make (internal-textdoc-install_):
	Only install GNUSTEP_INSTANCE if the file exists.  If not, print
	the message " Nothing to install because nothing was built
	(usually because makeinfo is not available)" instead of aborting.
	* messages.make (ALWAYS_ECHO_NO_LANGUAGES): New variable.	
	
2011-03-18  Nicola Pero  <nicola.pero@meta-innovation.com>
